Override form-data to patch CVE-2025-7783

--- a/package.json
+++ b/package.json
@@ -119,5 +119,8 @@
             "npx prettier --write",
             "npx eslint --fix"
         ]
+    },
+    "overrides": {
+        "form-data@2.3.2": "2.5.4"
     }
 }
